# TestInfra

./: .gitignore
C++/include/: Ate.h
C++/sim/: main.cpp
C++/src/: Ate.cpp
Config/: CMakeLists.txt  config.fish  settings.json  ver.fish
Python/pat/: cli.py  cls.py  cmd_parser.py  emit_python.py  formula.txt  ir.py  parser.py  pat_reader.py  tools.py  transform_ir.py
Python/pat/grammar/: cmd_grammar.lark  cmd_grammar2.lark  ctrl_grammar.lark  reg_grammar.lark
Python/pat/pattern/: OneWriteRead.pat  Simple.pat
Python/pattern/: test.pat
Python/sim/: main.py
Python/stubs/: ate.pyi
Verilog/: ver.fish
Verilog/rtl/: Ate.v  Dram.v  Driver.v  Out_Register.v  Sampler.v
